src/test/deca/context/valid/ContextAvecObjet/DeclMeth/FloatReturnInt.deca
//Description
//  Method type = float mais return int
//
//Réponse
//  ok

class A{
    int x;
    float test(){
        return this.x;
    }
}