src/test/deca/context/invalid/ContextAvecObjet/ManipulationClasse/typeEquals.deca
//Description
//  test equals avec un type comme argument
//
//Résultat
//  Erreur contextuelle ligne 12
//  identificateur non défini

class A{}
{
    A a = new A();
    int x = 0;
    a.equals(A);
}